--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<svg>
-		<use xlink:href="images/sprite.svg#faq-pluse"></use>
+		<use xlink:href="images/sprite.svg#pluse"></use>
 	</svg>
 	<form>
 		<input type="text" class="tel">
