--- a/app/index.html
+++ b/app/index.html
@@ -5,22 +5,22 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/app.min.css">
 </head>
 
 <body>
+
 	<svg>
-		<use xlink:href="images/sprite.svg#pluse"></use>
+		<use xlink:href="images/sprite.svg#whatsapp"></use>
 	</svg>
+	<p>qweqwewqe</p>
 	<form>
 		<input type="text" class="tel">
 	</form>
 
 	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eйцуqqwewesse, hic!qweasdы</p>
-	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eйцуqqwewesse, hic!qweasdы</p>
-	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eйцуqqwewesse, hic!qweasdы</p>
 
-	<script src="js/script.min.js"></script>
+	<script src="js/app.min.js"></script>
 </body>
 
 </html>
