--- a/app/index.html
+++ b/app/index.html
@@ -10,16 +10,19 @@
 
 <body>
 
-	<svg>
-		<use xlink:href="images/sprite.svg#whatsapp"></use>
-	</svg>
-	<p>qweqwewqe</p>
-	<form>
-		<input type="text" class="tel">
-	</form>
 
-	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eйцуqqwewesse, hic!qweasdы</p>
+	<div class="container">
+		<svg>
+			<use xlink:href="images/sprite.svg#whatsapp"></use>
+		</svg>
+		<p>Разделяет большой шрифт на несколько файлов по языкам. Предоставляет кроссплатформенный CSS код, для их подключения.</p>
+		<b>Разделяет большой шрифт на несколько файлов по языкам. Предоставляет кроссплатформенный CSS код, для их подключения.</b>
+		<form>
+			<input type="text" class="tel">
+		</form>
 
+		<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eйцуqqwewesse, hic!qweasdы</p>
+	</div>
 	<script src="js/app.min.js"></script>
 </body>
 
